# CBIC

./: CMakeLists.txt  Changelog  INPUT_test_everything  INPUT_test_everything_g  M.cbic  M.test_client  M.trig_bpms  Makefile  README  TestEverythingOutputSampleDouble.txt  TestEverythingOutputSampleSingle.txt  cbic.cmake  cbic.conf
client/: cbic_idle.c  cbic_request.c  cbic_take_orbit.c  set_dstat_stale.c  set_pstat_stale.c
include/: cbic_params.h  cbic_types.h  ext_structs.h  protos.h  standard_headers.h
main/: cbic.c  trig_bpms.c
management/: verify_connectivity.c
plotting_gp/: gp_cc_plot.c
system/: two_tier_startup.c
utils/: bucket_number.c  get_hexint.c  stopwatch.c  unpack.c
